# zeke.nvim

./: .gitignore  API.md  AUGUST_TODO.md  CHANGELOG.md  CONFIG.md  Cargo.toml  DOCS.md  EXAMPLES.md  EXAMPLE_CONFIG.md  FEATURES.md  INSTALLATION.md  README.md  TODO.md  TROUBLESHOOTING.md  ZEKE.md  ZEKE_API_DOCS.md  ZEKE_INTEGRATION.md  build.zig  build.zig.zon  example-config.lua  example-config.lua.old  test_http_connection.lua  test_plugin.lua
config/: ghostllm.toml
doc/: zeke.txt
docs/: CHEAT_SHEET.md  FEATURES.md  PRODUCTION_POLISH.md  README.md  UX_POLISH_COMPLETE.md  authentication.md  code-actions.md  ghostllm-integration.md  lazy-nvim-setup.md  mentions.md  partial-diffs.md  provider-switching.md  statusline.md  websocket-integration.md
docs/examples/: cost-conscious.lua  local-only.lua  minimal.lua  power-user.lua
examples/: init.lua  packer-config.lua  vim-plug-config.vim
lua/zeke/: actions.lua  agent.lua  auth.lua  backup.lua  cli.lua  commands.lua  commands.lua.backup  config.lua  consent.lua  diff.lua  discovery.lua  errors.lua  ghostlang.lua  help.lua  http_client.lua.deprecated  init.lua  integrations.lua  lazy.lua  lockfile.lua  logger.lua  mentions.lua  models.lua  progress.lua  prompts.lua  providers_ui.lua  requests.lua  resources.lua  safety.lua  selection.lua  statusline.lua  switcher.lua  terminal.lua  tokens.lua  ui.lua  utils.lua  websocket.lua  (+2 more)
plugin/: zeke.lua  zeke.vim
src/: ai.rs  ai_services.zig  auth.rs  config.rs  discovery.rs  http.zig  lib.rs  main.zig  providers.rs  streaming.rs  streaming.zig  terminal.rs  websocket.rs
(+15 files in other folders)
