[package]
name = "zeke-nvim"
version = "0.1.0"
edition = "2024"
authors = ["Christopher Kelley <ckelley@ghostkellz.sh>"]
description = "Neovim plugin for the Zeke AI platform - Claude Code alternative"
license = "MIT"
repository = "https://github.com/ghostkellz/zeke.nvim"

[lib]
name = "zeke_nvim"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.10", features = ["lua54", "module", "async", "serialize"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures-util = "0.3"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.8"
eventsource-stream = "0.2"
tokio-tungstenite = "0.24"
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
